objects/Time_Off__c.object
<CustomObject>
    <fields>
        <fullName>Absence_Tyype__c</fullName>
        <label>Absence Type</label>
        <picklist>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.5U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.5P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Off__c</fullName>
        <label>Date Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Number__c</fullName>
        <formula>MONTH(Date_Off__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unpaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF( 
  CEILING( (  Date_Off__c  - DATE( YEAR( Date_Off__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Date_Off__c - DATE( YEAR( Date_Off__c ), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Off</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Absence_Tyype__c</columns>
        <columns>Employee__c</columns>
        <columns>Date_Off__c</columns>
        <columns>Day__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Off__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Absences</label>
    </listViews>
    <listViews>
        <fullName>Find_Time_Off</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Absence_Tyype__c</columns>
        <columns>Date_Off__c</columns>
        <columns>Day__c</columns>
        <columns>Employee__c</columns>
        <columns>Month_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Off__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Find Time Off</label>
    </listViews>
    <listViews>
        <fullName>This_Months_Absences</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Absence_Tyype__c</columns>
        <columns>Employee__c</columns>
        <columns>Date_Off__c</columns>
        <columns>Day__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Quinn Carlin</value>
        </filters>
        <label>This Months Absences</label>
    </listViews>
    <nameField>
        <displayFormat>TO-{000000}</displayFormat>
        <label>Time Off Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>